# AoCTemplateCPP

./: .gitignore  CMakeLists.txt  README.md
days/: CMakeLists.txt
days/day01/: day01.cpp  day01.h  input_sample
include/: CMakeLists.txt  solution.h
src/: CMakeLists.txt  main.cpp  solution.cpp
